# dyson-sphere-program-translation-tool

./: .gitignore  LICENSE  README.md  glossary.txt  make.py  pyproject.toml
.github/: FUNDING.yml
original/: base.txt  creation.txt  demo.txt  dictionary.txt  keys.txt  parameters.txt  prototype.txt
src/: cache_manager.py  files_map.py  openai.py
tests/: test_core.py
translated/it/: base.txt  creation.txt  dictionary.txt  keys.txt  parameters.txt  prototype.txt
